[package]
name = "auth-service"
version = "0.1.0"
authors = ["Arkadiusz Żmudzin <arek@moodup.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.2.0"
serde = { version = "1.0.117", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "uuid", "r2d2", "chrono"] }
r2d2 = "0.8.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }